--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -65,6 +65,7 @@
 
 body {
     font-family: var(--font-family-system);
+    margin: 0;
     font-size: var(--font-size-body);
     font-weight: var(--font-weight-regular);
     line-height: var(--line-height-normal);
@@ -328,7 +329,7 @@ body {
         );
     backdrop-filter: blur(60px) saturate(200%);
     -webkit-backdrop-filter: blur(60px) saturate(200%);
-    padding: 24px;
+    padding: 20px;
     border-radius: 0 0 30px 30px;
     overflow-y: auto;
     overflow-x: hidden;
@@ -718,10 +719,6 @@ body {
     line-height: var(--line-height-normal);
 }
 
-.data-table-section {
-    margin-top: 32px;
-}
-
 .table-card {
     background: linear-gradient(
             145deg,
@@ -982,7 +979,7 @@ body {
     background-size: 16px;
     padding-right: 40px;
     min-width: 140px;
-    height: 42px
+    height: 42px;
 }
 
 .search-criteria-select:focus {
